[gd_scene load_steps=3 format=3 uid="uid://d4nepe0a70ju5"]

[ext_resource type="Script" path="res://addons/sprite-shader-mixer/src/extension/searchform/searchform.gd" id="1_ovoip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7166x"]
bg_color = Color(0.210938, 0.238281, 0.289063, 1)

[node name="Window" type="Window"]
title = "Shader Search"
initial_position = 1
size = Vector2i(650, 400)
unresizable = true
theme_override_colors/title_color = Color(1, 1, 1, 1)
script = ExtResource("1_ovoip")

[node name="panel_background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7166x")

[node name="margin" type="MarginContainer" parent="panel_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="panel_background/margin"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="panel_background/margin/VBoxContainer"]
layout_mode = 2

[node name="edit_search" type="TextEdit" parent="panel_background/margin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "search"

[node name="option_group" type="OptionButton" parent="panel_background/margin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "All"
popup/item_0/id = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="panel_background/margin/VBoxContainer"]
layout_mode = 2

[node name="tree" type="Tree" parent="panel_background/margin/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="panel" type="Panel" parent="panel_background/margin/VBoxContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(330, 300)
layout_mode = 2

[node name="panel_right" type="MarginContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right"]
layout_mode = 2

[node name="tab" type="TabBar" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tab_count = 2
tab_0/title = "Info"
tab_1/title = "Example"

[node name="panel_info" type="ScrollContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(310, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info"]
layout_mode = 2

[node name="container_author" type="HBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer"]
layout_mode = 2

[node name="label_author" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_author"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "author:"

[node name="text_author" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_author"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "spheras"

[node name="container_adaptedby" type="HBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer"]
layout_mode = 2

[node name="label_adaptedby" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_adaptedby"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "adapted:"

[node name="text_adaptedby" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_adaptedby"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "spheras"

[node name="container_link" type="HBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer"]
layout_mode = 2

[node name="label_link" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_link"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "link:"

[node name="text_link" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_link"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "http://www.github.com"
text_overrun_behavior = 4
max_lines_visible = 1
visible_characters_behavior = 2

[node name="container_license" type="HBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer"]
layout_mode = 2

[node name="label_license" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_license"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "license:"

[node name="text_license" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_license"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "MIT"

[node name="container_version" type="HBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer"]
layout_mode = 2

[node name="label_version" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_version"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "vesion:"

[node name="text_version" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_version"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "1.0"

[node name="container_description" type="VBoxContainer" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer"]
layout_mode = 2

[node name="label_description" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_description"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "description:"

[node name="text_description" type="Label" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer/panel_info/VBoxContainer/container_description"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in risus eget nisi pulvinar facilisis sed quis ex. Phasellus tortor lectus, rhoncus nec congue ac, laoreet a arcu. Aliquam facilisis vitae lacus id fringilla. Fusce pellentesque "
autowrap_mode = 3

[node name="panel_example" type="Panel" parent="panel_background/margin/VBoxContainer/HBoxContainer2/panel/panel_right/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="panel_background/margin/VBoxContainer"]
layout_mode = 2

[node name="button_select" type="Button" parent="panel_background/margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Shader"
